[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/scenes/BranchValue.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/hyh.cutscene_graph/scripts/EditorBranchNode.gd" type="Script" id=2]
[ext_resource path="res://addons/hyh.cutscene_graph/scenes/EditorGraphNodeBase.tscn" type="PackedScene" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/icon_add.svg-82a23b5eb0f0ffca6ee60eeed3ae9ec3.stex"

[node name="EditorBranchNode" instance=ExtResource( 3 )]
margin_top = 1.0
margin_right = 386.0
margin_bottom = 203.0
custom_constants/separation = 10
title = "Branch"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.949219, 0.274384, 0.479997, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.813103, 0.957031, 0.299072, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.813103, 0.957031, 0.299072, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 0.813103, 0.957031, 0.299072, 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
margin_left = 16.0
margin_top = 24.0
margin_right = 370.0
margin_bottom = 108.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 344.0
margin_bottom = 74.0
custom_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 334.0
margin_bottom = 54.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HeaderContainer" index="0"]
margin_right = 296.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_constants/vseparation = 10
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer/GridContainer" index="0"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Variable:"

[node name="VariableEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HeaderContainer/GridContainer" index="1"]
margin_left = 59.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer/GridContainer" index="2"]
margin_top = 37.0
margin_right = 55.0
margin_bottom = 51.0
text = "Scope:"

[node name="ScopeSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/HeaderContainer/GridContainer" index="3"]
margin_left = 59.0
margin_top = 34.0
margin_right = 296.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "Dialogue"
items = [ "Dialogue", null, false, 0, null, "Scene", null, false, 1, null, "Global", null, false, 2, null ]
selected = 0

[node name="AddValueButton" type="ToolButton" parent="MarginContainer/VBoxContainer/HeaderContainer" index="1"]
margin_left = 306.0
margin_top = 30.0
margin_right = 334.0
margin_bottom = 54.0
size_flags_vertical = 8
icon = SubResource( 1 )

[node name="ScopeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 64.0
margin_right = 334.0
margin_bottom = 64.0

[node name="BranchValue" parent="." index="1" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 118.0
margin_right = 370.0
margin_bottom = 152.0
locked = false
value = ""

[node name="BranchValue2" parent="." index="2" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 162.0
margin_right = 370.0
margin_bottom = 196.0
locked = false
value = ""
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HeaderContainer/GridContainer/VariableEdit" to="." method="_on_VariableEdit_text_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HeaderContainer/GridContainer/ScopeSelect" to="." method="_on_ScopeSelect_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderContainer/AddValueButton" to="." method="_on_AddValueButton_pressed"]
[connection signal="modified" from="BranchValue" to="." method="_value_modified" binds= [ 1 ]]
[connection signal="remove_requested" from="BranchValue" to="." method="_value_remove_requested" binds= [ 1 ]]
[connection signal="modified" from="BranchValue2" to="." method="_value_modified" binds= [ 2 ]]
[connection signal="remove_requested" from="BranchValue2" to="." method="_value_remove_requested" binds= [ 1 ]]
